; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/comet46/keymaps/default-rgbled/extr_keymap.c_led_init.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/comet46/keymaps/default-rgbled/extr_keymap.c_led_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DDRD = common dso_local global i32 0, align 4
@PORTD = common dso_local global i32 0, align 4
@DDRF = common dso_local global i32 0, align 4
@PORTF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @led_init() #0 {
  %1 = load i32, i32* @DDRD, align 4
  %2 = or i32 %1, 2
  store i32 %2, i32* @DDRD, align 4
  %3 = load i32, i32* @PORTD, align 4
  %4 = or i32 %3, 2
  store i32 %4, i32* @PORTD, align 4
  %5 = load i32, i32* @DDRF, align 4
  %6 = or i32 %5, 48
  store i32 %6, i32* @DDRF, align 4
  %7 = load i32, i32* @PORTF, align 4
  %8 = or i32 %7, 48
  store i32 %8, i32* @PORTF, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
